[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://assets/classic/sprites/button_no or close.png" type="Texture" id=2]
[ext_resource path="res://assets/classic/sprites/button_no or close_hover.png" type="Texture" id=3]
[ext_resource path="res://assets/classic/font/nokiafc22.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/classic/sprites/yellow_checkmark.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]

font/size = 52
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]

font/size = 10
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[node name="Settings" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="BG" type="Node2D" parent="."]

[node name="btn_close" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 603.863, 103.816 )
transform/scale = Vector2( 0.3, 0.3 )
z/z = 1
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 45.0
margin/top = 100.0
margin/right = 685.0
margin/bottom = 1040.0
__meta__ = {
"_edit_lock_": true
}

[node name="Dificulty" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 120.0
margin/right = 344.0
margin/bottom = 185.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
text = "DIFICULTY"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CheckBox_easy" type="CheckBox" parent="Panel"]

rect/scale = Vector2( 5, 5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 200.0
margin/right = 76.0
margin/bottom = 222.0
custom_icons/checked = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.993042, 1, 0.109375, 1 )
custom_colors/font_color_pressed = Color( 0.933333, 0.933333, 0.219608, 1 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "EASY"
flat = false
align = 0

[node name="CheckBox_normal" type="CheckBox" parent="Panel"]

rect/scale = Vector2( 5, 5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 300.0
margin/right = 94.0
margin/bottom = 322.0
custom_icons/checked = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.993042, 1, 0.109375, 1 )
custom_colors/font_color_pressed = Color( 0.933333, 0.933333, 0.219608, 1 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "NORMAL"
flat = false
align = 0

[node name="CheckBox_hard" type="CheckBox" parent="Panel"]

rect/scale = Vector2( 5, 5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 400.0
margin/right = 94.0
margin/bottom = 422.0
custom_icons/checked = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.993042, 1, 0.109375, 1 )
custom_colors/font_color_pressed = Color( 0.933333, 0.933333, 0.219608, 1 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "HARD"
flat = false
align = 0

[node name="Audio" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 530.0
margin/right = 344.0
margin/bottom = 595.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
text = "AUDIO"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CheckButton" type="CheckButton" parent="Panel"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 630.0
margin/right = 122.0
margin/bottom = 658.0
custom_fonts/font = SubResource( 3 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "FX"
flat = false
align = 0

[connection signal="pressed" from="btn_close" to="." method="_on_btn_close_pressed"]

[connection signal="pressed" from="Panel/CheckBox_easy" to="." method="_on_CheckBox_easy_pressed"]

[connection signal="pressed" from="Panel/CheckBox_normal" to="." method="_on_CheckBox_normal_pressed"]

[connection signal="pressed" from="Panel/CheckBox_hard" to="." method="_on_CheckBox_hard_pressed"]

[connection signal="pressed" from="Panel/CheckButton" to="." method="_on_CheckButton_pressed"]


